--- a/src/assets/style/globals.scss
+++ b/src/assets/style/globals.scss
@@ -1,29 +1,53 @@
-@import "../../assets/style/_variables";
+@import "variables";
 
-.w-150 {
-  width: 150px !important;
-}
-
-.w-250 {
-  width: 250px !important;
+.w-350 {
+  width: 350px !important;
 }
 
 .mr-10 {
-  margin-right: 10px;
+  margin-right: 10px !important;
 }
 
-.fw-600 {
-  font-weight: 600;
+.mt-50 {
+  margin-top: 50px !important;
+}
+
+.mt-100 {
+  margin-top: 100px !important;
+}
+
+.el-input {
+  .el-input__inner {
+    border-radius: 10px;
+    box-shadow: 0px 11px 13px 0px rgba(0, 0, 0, 0.25);
+    z-index: 15;
+    border-width: 2px;
+    transition: all 0.2s ease-in-out;
+    border-color: transparent;
+    &:hover,
+    &:focus {
+      transition: all 0.2s ease-in-out;
+      border-color: $rem;
+    }
+  }
+}
+
+a {
+  color: $rem !important;
+}
+
+.center-div {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.full-height {
+  height: 100vh;
 }
 
 .vertical-align {
   align-items: center;
-}
-
-.column {
-  text-align: left;
-}
-
-.blue-color {
-  color: $blue;
 }
