--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,84 +1,40 @@
-@import "../../assets/style/variable";
+@import "../../assets/style/variables";
 
-.hotel-info-content {
-  .el-table__body {
-    .el-radio__label {
-      display: none;
-    }
+.login_index {
+  height: 100vh;
+  background: url('../../assets/img/bg-image.jpg') no-repeat center center;
+  background-size: cover;
+
+  .logo {
+    width: 90px;
   }
 
-  .room-based-text {
-    font-size: 12px;
-    font-weight: normal;
-    color: #666674;
-    text-align: center;
-    position: absolute;
-    bottom: 5px;
-    left: 0px;
-    width:100%;
+  .welcome-msg {
+    font-size: 40px;
+    width: 215px;
+    font-weight: 300;
   }
-}
 
-.el-table {
-  td {
-    .cell {
-      color: $tb-slate-grey !important;
-      font-family: Poppins, sans-serif !important;
-      font-weight: 300;
-    }
-  }
-}
-
-.hotel-all-list {
-  transition: all 0.2s ease-in-out;
-  .is-active {
-    border-radius: 5px;
-    border: 2px solid #f79421;
-    transition: all 0.2s ease-in-out;
-  }
-}
-.round-img {
-  img {
+  .login-btn {
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(238, 51, 124);
     border-radius: 10px;
-  }
-}
-.hotel-detail-text {
-  position: relative;
-  span {
-    display: block;
-    width: 100%;
-  }
+    color: $rem;
+    transition: all 0.2s ease-in-out;
+    width:100px;
+    text-align: center;
+    padding:0 !important;
+    height: 40px;
+    line-height: 40px;
+    font-size: 14px;
 
-  small {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(100, 100, 100, 0)), color-stop(75%, #ffffff));
-    height: 126px;
-    position: absolute;
-    width: 100%;
-    bottom: 33px;
-  }
-
-  .text-shadow {
-    display: none;
-  }
-
-  .btn-show-hide {
-    padding: 1px 10px;
-    border-radius: 8px;
-    background-color: #f7a74a;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-  }
-
-  .height {
-    max-height: 170px;
-    display: block;
-    overflow: hidden;
-    transition: max-height .5s ease;
-  }
-
-  .normal {
-    height: auto;
-    transition: max-height .5s ease;
+    &:hover,
+    &:focus {
+      background: transparent;
+      transition: all 0.2s ease-in-out;
+      box-shadow: 0px 1px 13px 0px rgb(238, 51, 124);
+      outline: none;
+    }
   }
 }
