--- a/src/views/Home/HomePage.scss
+++ b/src/views/Home/HomePage.scss
@@ -1,13 +1,26 @@
-@import "../assets/style/_variables";
+@import "../../assets/style/variables";
 
 
-i {
-  font-size:18px;
-}
-.el-icon-success {
-  color: green;
-}
-
-.el-icon-remove {
-  color: red;
+.enter-btn {
+  font-size:21px;
+  position: relative;
+  color: $rem;
+  cursor: pointer;
+  &::after {
+    content:'';
+    position: absolute;
+    left:0px;
+    bottom:-1px;
+    width:100%;
+    height: 2px;
+    background: $rem;
+    transition: all 0.5s ease-in-out;
+    transform: scale(0);
+  }
+  &:hover {
+    &::after {
+      transition: all 0.5s ease-in-out;
+      transform: scale(1);
+    }
+  }
 }
